--- a/Dynamic Programming/BOJ_2156_포도주 시식/BOJ_2156_포도주 시식.md
+++ b/Dynamic Programming/BOJ_2156_포도주 시식/BOJ_2156_포도주 시식.md
@@ -1,8 +1,28 @@
-![header](https://capsule-render.vercel.app/api?type=waving&height=200&color=0:B2E6FF,100:FFB2D6&text=BOJ%202156&fontColor=FFFFFF&fontAlign=80&fontAlignY=35&fontSize=50)
-Problem
+![header](https://capsule-render.vercel.app/api?type=waving&height=200&color=0:B2E6FF,100:FFB2D6&text=BOJ%20Number&fontColor=FFFFFF&fontAlign=80&fontAlignY=35&fontSize=50)
 
-Description
+# **🔒Problem**
 
-Related Issue
+> [문제번호 nnnn](https://www.acmicpc.net/problem/nnnn)
 
-Memory & Time
+<br>
+<br>
+
+# **🔑Description**
+
+> Description for code.
+
+<br>
+<br>
+
+# **📑Related Issues**
+
+> DP 문제 풀때 index 벗어나지 않도록 신경쓰기
+
+<br>
+<br>
+
+# **🕛Resource**
+
+| Memory | Time   |
+| ------ | ------ |
+| nnnnKB | nnnnms |
