알고리즘 스터디 2주차 BOJ 2156 포도주 시식 Description

--- a/Dynamic Programming/BOJ_2156_포도주 시식/BOJ_2156_포도주 시식.md
+++ b/Dynamic Programming/BOJ_2156_포도주 시식/BOJ_2156_포도주 시식.md
@@ -1,28 +1,68 @@
-![header](https://capsule-render.vercel.app/api?type=waving&height=200&color=0:B2E6FF,100:FFB2D6&text=BOJ%20Number&fontColor=FFFFFF&fontAlign=80&fontAlignY=35&fontSize=50)
+![header](https://capsule-render.vercel.app/api?type=waving&height=200&color=0:B2E6FF,100:FFB2D6&text=BOJ%202156&fontColor=FFFFFF&fontAlign=80&fontAlignY=35&fontSize=50)
 
 # **🔒Problem**
 
-> [문제번호 nnnn](https://www.acmicpc.net/problem/nnnn)
+> [BOJ 2156 포도주 시식](https://www.acmicpc.net/problem/2156)
+
+<br>
+<br>
+
+# **Code**
+
+```java
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+
+public class Main {
+
+  public static void main(String[] args) throws NumberFormatException, IOException {
+
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+
+    int n = Integer.parseInt(br.readLine());
+
+    int[] wine = new int[n + 3];
+    int[] dp = new int[n + 3];
+
+    for (int i = 3; i < n + 3; i++) {
+      wine[i] = Integer.parseInt(br.readLine());
+    }
+    for (int i = 3; i < n + 3; i++) {
+      dp[i] = Math.max(dp[i - 3] + wine[i] + wine[i - 1], Math.max(dp[i - 2] + wine[i], dp[i - 1]));
+    }
+
+    System.out.println(dp[n + 2]);
+  }
+
+}
+```
 
 <br>
 <br>
 
 # **🔑Description**
 
-> Description for code.
+> dp[i - 1]까지 최댓값이 들어있다고 가정할때 dp[i]의 최댓값이 될 수 있는 경우는 3가지
+>
+> 1. dp[i - 3]만큼 마신 상태에서 직전와인이랑 현재와인 마시기
+> 2. dp[i - 2]만큼 마신 상태에서 현재와인 마시기
+> 3. dp[i - 1]만큼만 마시기(현재와인 안마심)
+>
+> 3잔 연속으로 못 마신다는 조건때문에 위 경우들을 생각했고 셋 중에 최댓값 찾음
 
 <br>
 <br>
 
 # **📑Related Issues**
 
-> DP 문제 풀때 index 벗어나지 않도록 신경쓰기
+> DP 계산할 때 index 벗어나지 않도록 신경쓰기
 
 <br>
 <br>
 
 # **🕛Resource**
 
-| Memory | Time   |
-| ------ | ------ |
-| nnnnKB | nnnnms |
+| Memory  | Time  |
+| ------- | ----- |
+| 12760KB | 112ms |
